# ocaml-solo5-old

./: .gitignore  Makefile  README.md  build.ml  dune  dune-project  dune.inc  solo5-genode.opam  solo5-hvt.opam  solo5-muen.opam  solo5-spt.opam  solo5-virtio.opam  solo5.opam
bindings/genode/: nolibc
bindings/hvt/: nolibc  openlibm
bindings/muen/: openlibm
files/: build.ml  dune.genode  dune.hvt  dune.inc  dune.muen  dune.spt  dune.virtio
scripts/: build-openlibm.sh  configure-ocaml.sh  vendor-freestanding.sh  vendor-solo5.sh
src/include/solo5/: solo5_version.h.distrib
