(data_only_dirs vendor)

(library
 (public_name solo5)
 (modules))

(subdir
 vendor/solo5
 (rule
  (targets elf_abi.h hvt_abi.h mft_abi.h solo5.h solo5_version.h spt_abi.h
    crt solo5-elftool)
  (package solo5)
  (deps
   (source_tree .))
  (action
   (progn
    (bash "./configure.sh")
    (run %{make} CONFIG_HVT= CONFIG_SPT= CONFIG_VIRTIO= CONFIG_MUEN=
      CONFIG_GENODE=)
    (run %{make} elftool/solo5-elftool)
    (bash "cp include/solo5/*.h .")
    (bash "cp -R include/crt .")
    (bash "cp elftool/solo5-elftool ."))))
 (install
  (section bin)
  (package solo5)
  (files solo5-elftool))
 (install
  (section lib)
  (package solo5)
  (files elf_abi.h hvt_abi.h mft_abi.h solo5.h solo5_version.h spt_abi.h crt)))
