opam-version: "2.0"
maintainer: [
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "martin@lucina.net"
]
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
license: "ISC"
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
dev-repo: "git+https://github.com/solo5/solo5.git"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "conf-pkg-config"
  "conf-libseccomp" {build & os = "linux"}
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.5.0"}
  "solo5" {= version}
]
available: arch = "x86_64" & (os = "linux" | os = "freebsd" | os = "openbsd")

synopsis: "Solo5 sandboxed execution environment (muen target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "muen" target. The resulting
unikernels can then be deployed directly on a host running the
Muen Separation Kernel.

Building the "muen" target is supported on 64-bit Linux, FreeBSD
and OpenBSD systems."""
