opam-version: "2.0"
maintainer: [
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "martin@lucina.net"
]
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
license: "ISC"
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
dev-repo: "git+https://github.com/solo5/solo5.git"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "conf-pkg-config"
  "conf-libseccomp" {os = "linux"}
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.5.0"}
  "solo5" {= version}
]
available: (arch = "x86_64" | arch = "arm64") & os = "linux"
depexts: [
  ["linux-headers"] {os-distribution = "alpine"}
  ["linux-libc-dev"] {os-distribution = "debian"}
  ["kernel-headers"] {os-distribution = "fedora"}
  ["kernel-headers"] {os-distribution = "rhel"}
  ["linux-libc-dev"] {os-distribution = "ubuntu"}
]

synopsis: "Solo5 sandboxed execution environment (spt target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "spt" target and the "solo5-spt" tender
binary used to run such unikernels.

The "spt" target is supported on 64-bit Linux systems only."""
